--- a/apps/dashboard/src/pages/components/Layout.astro
+++ b/apps/dashboard/src/pages/components/Layout.astro
@@ -9,11 +9,17 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Galena Dashboard</title>
+
+    <script
+      src="https://unpkg.com/htmx.org@2.0.6"
+      integrity="sha384-Akqfrbj/HpNVo8k11SXBb6TlBWmXXlYQrCSqEWmyKJe+hDm3Z/B2WVG4smwBkRVm"
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <main>
       <slot />
     </main>
+    <section id="popup"></section>
   </body>
 
   <style is:global>
@@ -31,6 +37,30 @@
       padding-top: 1em;
       display: grid;
       justify-content: center;
+    }
+
+    #popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+
+      dialog {
+        background: #1e2129;
+        color: #ddd;
+        border: 2px solid #313542;
+        border-radius: 0.5em;
+        outline: none;
+        min-width: 500px;
+
+        position: absolute;
+        top: 50lvh;
+        left: 50lvw;
+        transform: translate(-50%, -50%);
+
+        h3 {
+          text-align: center;
+        }
+      }
     }
   </style>
 </html>
