--- a/apps/dashboard/src/components/Form.astro
+++ b/apps/dashboard/src/components/Form.astro
@@ -6,7 +6,7 @@ const props = Astro.props;
 const csrfToken = await generateCSRF(Astro.locals.user);
 ---
 
-<form {...props}>
-  <input type="hidden" name={CSRF_KEY} value={csrfToken} />
+<form parse-types="true" hx-disabled-elt="button" {...props}>
+  <input hidden name={CSRF_KEY} value={csrfToken} />
   <slot />
 </form>
