--- a/apps/dashboard/src/components/Layout.astro
+++ b/apps/dashboard/src/components/Layout.astro
@@ -47,12 +47,38 @@ import Popup from "./Popup.astro";
       background: #1e2129;
       color: #ddd;
       font-family: sans-serif;
+
+      ::selection {
+        background: var(--accent);
+      }
     }
 
     main {
-      padding-top: 1em;
+      padding: 1em 0;
       display: grid;
       justify-content: center;
+    }
+
+    button {
+      cursor: pointer;
+      user-select: none;
+
+      &:hover {
+        filter: brightness(110%);
+      }
+
+      &:disabled {
+        filter: opacity(90%);
+        cursor: not-allowed;
+
+        &[data-disabled-by-htmx] {
+          cursor: wait;
+        }
+
+        &:hover {
+          filter: brightness(110%), opacity(90%);
+        }
+      }
     }
 
     form {
@@ -65,7 +91,9 @@ import Popup from "./Popup.astro";
         border-radius: 0.2em;
         outline: 0px solid var(--accent);
         outline-offset: 2px;
-        transition: outline 0.1ss ease;
+        transition:
+          outline 0.1s ease,
+          filter 0.1s ease;
 
         &:focus-visible {
           outline-width: 2px;
