--- a/apps/dashboard/src/pages/index.astro
+++ b/apps/dashboard/src/pages/index.astro
@@ -3,9 +3,70 @@ import Layout from "@/components/Layout.astro";
 import Page from "@/components/Page.astro";
 import { getLinks } from "@teamgalena/shared/database";
 
-const page = await getLinks({ size: 20 });
+const size = 16;
+const page = await getLinks({ size });
 ---
 
 <Layout>
-  <Page page={page} />
+  <p class="info">
+    {page.pageInfo.total} supporters have linked their minecraft account
+  </p>
+  <table>
+    <thead>
+      <tr>
+        <th>UUID</th>
+        <th>Discord-ID</th>
+        <th>Created</th>
+        <th>Updated</th>
+        <th>Rank</th>
+        <th>Flags</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <Page page={page} />
+    </tbody>
+  </table>
 </Layout>
+
+<style>
+  .info {
+    text-align: center;
+  }
+
+  table {
+    border-collapse: collapse;
+    font-size: 1.2em;
+  }
+
+  th {
+    padding: 0.5em;
+  }
+
+  tbody {
+    tr:nth-child(odd) {
+      background: #fff2;
+    }
+
+    td {
+      padding: 0.25em 0.5em;
+    }
+
+    .actions {
+      button {
+        background: none;
+        border: none;
+        outline: none;
+
+        font-size: 1.25em;
+
+        transition: background 0.2s ease;
+        border-radius: 0.25em;
+
+        &:hover {
+          background: #fff3;
+        }
+      }
+    }
+  }
+</style>
