--- a/apps/dashboard/src/components/Layout.astro
+++ b/apps/dashboard/src/components/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "./Footer.astro";
 import Indicator from "./Indicator.astro";
 import Popup from "./Popup.astro";
 ---
@@ -37,6 +38,7 @@ import Popup from "./Popup.astro";
     <Popup>
       <slot name="dialog" />
     </Popup>
+    <Footer />
   </body>
 
   <style is:global>
